Убраны ручки forward и respond.
