# docs/swagger.json
@@ -130,81 +130,6 @@
                 }
             }
         },
-        "/mail/forward": {
-            "get": {
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/pkg.JsonResponse"
-                        },
-                        "headers": {
-                            "X-CSRF-Token": {
-                                "type": "string",
-                                "description": "CSRF токен"
-                            }
-                        }
-                    }
-                }
-            },
-            "post": {
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Переслать уже существующее письмо",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "ID запрашиваемого письма.",
-                        "name": "mail_id",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "description": "Форма письма",
-                        "name": "MailForm",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.MailForm"
-                        }
-                    },
-                    {
-                        "type": "string",
-                        "description": "CSRF токен",
-                        "name": "X-CSRF-Token",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/pkg.JsonResponse"
-                        }
-                    },
-                    "401": {
-                        "description": "Сессия отсутствует или сессия не валидна.",
-                        "schema": {
-                            "$ref": "#/definitions/pkg.JsonResponse"
-                        }
-                    },
-                    "405": {
-                        "description": "Method Not Allowed",
-                        "schema": {
-                            "$ref": "#/definitions/pkg.JsonResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Письмо не принадлежит пользователю, ошибка БД, неверные GET параметры.",
-                        "schema": {
-                            "$ref": "#/definitions/pkg.JsonResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/mail/get": {
             "get": {
                 "produces": [
@@ -351,81 +276,6 @@
                         "name": "id",
                         "in": "query",
                         "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "CSRF токен",
-                        "name": "X-CSRF-Token",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/pkg.JsonResponse"
-                        }
-                    },
-                    "401": {
-                        "description": "Сессия отсутствует или сессия не валидна.",
-                        "schema": {
-                            "$ref": "#/definitions/pkg.JsonResponse"
-                        }
-                    },
-                    "405": {
-                        "description": "Method Not Allowed",
-                        "schema": {
-                            "$ref": "#/definitions/pkg.JsonResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Письмо не принадлежит пользователю, ошибка БД, неверные GET параметры.",
-                        "schema": {
-                            "$ref": "#/definitions/pkg.JsonResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/mail/respond": {
-            "get": {
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/pkg.JsonResponse"
-                        },
-                        "headers": {
-                            "X-CSRF-Token": {
-                                "type": "string",
-                                "description": "CSRF токен"
-                            }
-                        }
-                    }
-                }
-            },
-            "post": {
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Ответить на письмо пользователя",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "ID запрашиваемого письма.",
-                        "name": "mail_id",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "description": "Форма письма",
-                        "name": "MailForm",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.MailForm"
-                        }
                     },
                     {
                         "type": "string",
